// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When the Farley component is created and the errorMessage prop is set to a truthy string should render correctly 1`] = `
<div
  className="farley"
>
  <img
    alt="Farley"
    className="farley__image-container"
    src="Farley.png"
  />
  <div
    className="farley__speech-bubble-container"
  >
    <div
      className="speech-bubble"
    >
      <div
        className="speech-bubble__text-container"
      >
        <p
          className="speech-bubble__text-container__error-message"
        >
          test_error_messagge
        </p>
        <div
          className="speech-bubble__pointer-container"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`When the Farley component is created and the errorMessage prop is set to null should render correctly 1`] = `
<div
  className="farley"
>
  <img
    alt="Farley"
    className="farley__image-container"
    src="Farley.png"
  />
  <div
    className="farley__speech-bubble-container"
  >
    <div
      className="speech-bubble"
    >
      <div
        className="speech-bubble__text-container"
      >
        <p
          className="speech-bubble__text-container__word"
          onClick={[Function]}
        >
          test_word(1)
        </p>
        <div
          className="speech-bubble__pointer-container"
        />
      </div>
    </div>
  </div>
</div>
`;
